# fusion-launcher

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.ru.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  pages.yml  release-windows.yml
docs/: metadata-artwork.md  mvp-windows-install.md  release-checklist.md  repository-authoring.md  source-library-authoring.md  source-library-template.md
examples/repositories/: homebrew-library.json  scraper-library.json  showcase.metadata.json
public/: demo-repository.json
public/demo-content/: LICENSE.txt  fusion-launcher-smoke-legacy.nes  fusion-launcher-smoke.nes  retrohydra-demo.nes
public/source-libraries/: official-starter.json  unofficial-player-wishlist.json
scripts/: build-sidecar.mjs  build-source-template-pages.mjs  build-source-template-pages.node-test.mjs  fetch-vcredist.mjs  generate-demo-rom.mjs  mvp-package-smoke.mjs  mvp-release-windows.mjs  mvp-smoke.mjs  mvp-visual.mjs  settings-performance.node-test.mjs  validate-source-library.mjs  validate-source-library.node-test.mjs
sidecar/: README.md  requirements.txt  torrent_sidecar.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.sidecar.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh
src-tauri/redist/: .gitignore
src-tauri/src/: archive.rs  builtin_demo.rs  commands.rs  downloads.rs  emulator_setup.rs  github_resolver.rs  launcher.rs  lib.rs  libtorrent_engine.rs  logging.rs  main.rs  manifest.rs  net.rs  orchestrator.rs  platform.rs  schema.rs  scraper.rs  security.rs  setup_profiles.rs  storage.rs  torrent.rs  torrent_engine.rs
src-tauri/src/commands/: diagnostics.rs  diagnostics_helpers.rs  downloads.rs  emulators.rs  import_helpers.rs  library.rs  metadata.rs  mod.rs  reports.rs  repository_helpers.rs  runtime_helpers.rs  settings.rs  setup.rs  setup_helpers.rs  shared.rs  smoke.rs  status_helpers.rs  tests.rs
src-tauri/src/scrapers/: screenscraper.rs  steamgriddb.rs
src-tauri/src/storage/: catalog.rs  config.rs  downloads.rs  emulators.rs  metadata.rs  migrations.rs  mod.rs  repositories.rs  rows.rs  tests.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Dashboard.tsx  GameDetailsModal.tsx  InstallProgressOverlay.tsx  (+4 more)
(+69 files in other folders)
