[package]
name = "retrohydra"
version = "0.1.0"
description = "RetroHydra BYOR desktop content aggregator"
authors = ["RetroHydra"]
edition = "2021"

[lib]
name = "retrohydra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
hex = "0.4"
librqbit = "8.1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shlex = "1.3"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["fs", "process", "sync", "time"] }
url = "2"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
